common TextInput completed

--- a/Kandigram_Beta/android/app/src/main/res/values/strings.xml
+++ b/Kandigram_Beta/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kandigram_Beta</string>
+    <string name="fb519499225580714">Facebook App ID</string>
 </resources>
