--- a/Kandigram_Beta/android/app/src/main/res/values/strings.xml
+++ b/Kandigram_Beta/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kandigram_Beta</string>
     <string name="fb519499225580714">Facebook App ID</string>
+    <string name="default_notification_channel_id">default_channel_id</string>>
 </resources>
